<resources>
    <string name="app_name">Активный студент</string>
    <string name="login">Войти</string>
    <string name="makePhoto">Сделать снимок</string>
    <string name="labelName">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="strAuth">Авторизация</string>
    <string name="text_for_recycleview">text for recycleview</string>
    <string name="smart_student">Smart Student</string>
    <string name="hintPass">Пароль</string>
    <string name="hintId">id студента или сотрудника</string>
    <string name="title">Smart student</string>
    <string name="newMsg">Новое сообщение</string>
    <string name="schedule">Расписание</string>
    <string name="despription">Заказать справку</string>
    <string name="my_msg">Мои сообщения</string>
    <string name="dataState">Дата поступления</string>
    <string name="dataImpl">Дата выполнения</string>
    <string name="address">Адрес</string>
    <string name="desc">Дополнительное описание</string>
    <string name="executor">Исполнитель</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="title_activity_edit_message">EditMessageActivity</string>
    <string name="save">Сохранить</string>
    <string name="numMessage">Номер заявки</string>
    <string name="done">Обжаловать</string>
    <string name="send">Отправить</string>
    <string name="allMsg">Мои выполненные зявки</string>
    <string name="untreatedMsg">Новые зявки</string>
    <string name="labelNewMessages">Нет новых заявок.</string>
    <string name="LabelMyMessage">Ваших сообщений не найдено.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="callsLessons">\n
       <b>1 пара:</b>    8.20 - 9.50   \n\n
       <b>2 пара:</b>    10.00 - 11.30 \n\n
       <b>3 пара:</b>    11.45 - 13.15 \n\n
       <b>4 пара:</b> 14.00 - 15.30 \n\n
       <b>5 пара:</b>     15.45 - 17.15 \n\n
       <b>6 пара:</b>    17.20 - 18.50 \n\n
       <b>7 пара:</b>    18.55 - 20.25 \n
    </string>
    <string name="schenduleLessons">&lt;b>8.20 - 9.50:&lt;/b>   %1$s  &lt;br/> &lt;br/>
        &lt;b>10.00 - 11.30:&lt;/b> %2$s  &lt;br/> &lt;br/>
        &lt;b>11.45 - 13.15:&lt;/b> %3$s  &lt;br/> &lt;br/>
        &lt;b>14.00 - 15.30:&lt;/b> %4$s  &lt;br/> &lt;br/>
        &lt;b>15.45 - 17.15:&lt;/b> %5$s  &lt;br/> &lt;br/>
        &lt;b>17.20 - 18.50:&lt;/b> %6$s  &lt;br/> &lt;br/>
        &lt;b>18.55 - 20.25:&lt;/b> %7$s  &lt;br/> &lt;br/>
    </string>
    <string name="callDispatchService">Позвонить в диспетчерскую службу</string>
</resources>
