<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activestudent.com.client.alex.presentation.views.student.activites.DetailMessageActivity">

    <include layout="@layout/my_toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnPressed"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_moderation"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_nummessage"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintNumMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/numMessage"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_schedule"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintTimeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/dataState"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimeImpl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_schedule"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintTimeImpl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/dataImpl"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvExecutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableStart="@drawable/ic_executor"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintExecutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/executor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_location"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/address"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableStart="@drawable/ic_description"
            android:theme="@style/TextViewStyle" />

        <TextView
            android:id="@+id/hintDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/desc"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnDone"
            style="@style/ButtonStyle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/done"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>