<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activestudent.com.client.alex.presentation.views.student.activites.AccountStudent">

    <include layout="@layout/my_toolbar" />

    <Button
        android:id="@+id/newMsg"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="110dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/ic_mode_edit_black_24dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/newMsg"
        android:textAllCaps="false"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/myMsg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/ripple_acc_btn"
            android:drawablePadding="25dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/my_msg"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <View
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderBtn" />

        <Button
            android:id="@+id/btnSchendule"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/ripple_acc_btn"
            android:drawablePadding="25dp"
            android:drawableStart="@drawable/ic_schedule"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/schedule"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderBtn" />

        <Button
            android:id="@+id/reference"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/ripple_acc_btn"
            android:drawablePadding="25dp"
            android:drawableStart="@drawable/ic_description"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="@string/despription"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
